# options-screener

./: .gitignore  README.md  ibtest.py  large-hits.csv  main.py  pyproject.toml  requirements.txt  small-hits.csv
data/assets/: indices.json  large-caps.json
src/data/cache/: cache.db
src/strategy_screener/: cli.py  config.py  main.py
src/strategy_screener/api/: client.py
src/strategy_screener/core/: base_screener.py  ccs_screener.py  handlers.py  ic_screener.py  pcs_screener.py
src/strategy_screener/utils/: assets.py  bollinger_screener.py  cspscreener.py  helpers.py  icscreener.py  indicators.py  trender.py
tests/: conftest.py  test_cli.py  test_main.py
